--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,9 +4,9 @@
     <ion-tabs>
 
         <ion-tab-bar slot="bottom" [translucent]="true">
-        <ion-tab-button tab="home" layout="icon-top">
-            <ion-icon name="search"></ion-icon>
-            <ion-label>Explore</ion-label>
+        <ion-tab-button tab="inventario" layout="icon-top">
+            <ion-icon name="file-tray-stacked"></ion-icon>
+            <ion-label>Inventario</ion-label>
         </ion-tab-button>
     
         <ion-tab-button tab="rutas" layout="icon-top">
