--- a/src/app/home/shared/pages/charts/charts.page.scss
+++ b/src/app/home/shared/pages/charts/charts.page.scss
@@ -17,6 +17,14 @@
   font-family: Poppins-Medium;
 }
 
+ion-toolbar {
+  --background: var(--ion-background-color);
+}
+
 #chart1 {
   font-family: Poppins-Medium;
+}
+
+ion-card {
+  border-radius: 15px;
 }
