--- a/src/app/home/shared/pages/inventario-form/inventario-form.page.html
+++ b/src/app/home/shared/pages/inventario-form/inventario-form.page.html
@@ -3,7 +3,7 @@
    <ion-icon
       class="arrow-back"
       name="arrow-back-outline"
-      routerLink="/inventario"
+      routerLink="/home/inventario"
       slot="start"
       (click)="inventarioService.resetForm(inventarioService.inventarioForm)">
    </ion-icon>
