--- a/src/app/home/shared/pages/usuarios/usuarios.page.html
+++ b/src/app/home/shared/pages/usuarios/usuarios.page.html
@@ -24,7 +24,7 @@
           </ion-card>
   
           <ion-card>
-            <ion-item id="square" *ngFor="let user of list">
+            <div id="square" *ngFor="let user of list">
               <div id="row-section">
                 <ion-row class="ion-align-items-center" id="registro">
                   <!-- <form [formGroup]="this.authService.authForm"> -->
@@ -36,7 +36,7 @@
                   <!-- </form> -->
                 </ion-row>
               </div>
-          </ion-item>
+          </div>
           </ion-card>
           
           
