--- a/src/app/home/shared/pages/account/account.page.html
+++ b/src/app/home/shared/pages/account/account.page.html
@@ -1,34 +1,78 @@
-<ion-header class="ion-no-border">
+<!-- <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-icon class="arrow-back" name="arrow-back-outline" routerLink="/" slot="start"></ion-icon>
-    <!-- <img class="arrow-back" src="../../../../../assets//images/arrow-back-up.png" width="32px" routerLink="/" slot="start"> -->
     <ion-title>
       Editar perfil
     </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
-    <form [formGroup]="usersService.userForm" (ngSubmit)="onSubmitUpdate(this.usersService.userForm.value)">
-      <img (click)="takePicture()" class="photo" [src]="getImgContent()" width="250px" alt="image account">
-    
+
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+    <!-- <form [formGroup]="usersService.userForm" (ngSubmit)="onSubmitUpdate(this.usersService.userForm.value)"> -->
+
+      <ion-list>
+        <div style="position: relative;">
+          <!-- <ion-button class="camera-button" (click)="takePicture()">
+            <ion-icon name="camera-outline"></ion-icon>
+          </ion-button> -->
+          <ion-item class="photo" lines="none">
+            <ion-avatar>
+              <img class="photo" [src]="getImgContent()" width="80px" height="80px" alt="image account">
+            </ion-avatar>
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  <ion-label class="user-name" >
+                    <h2>
+                      {{name}}
+                    </h2>
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col>
+                  <ion-label class="user-occupation">
+                    {{occupation}}
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+        </div>
+      </ion-list>
+
       <ion-list>
 
-        <ion-input type="hidden" name="$key" formControlName="$key"></ion-input>
+        <ion-item lines="none" [routerLink]="['/home/personal-data']">
+          <ion-icon name="person-circle-sharp"></ion-icon>
+          <ion-label>Personal Data</ion-label>
+        </ion-item>
+
+        <ion-item lines="none" [routerLink]="['/home/settings']">
+          <ion-icon name="settings-sharp"></ion-icon>
+          <ion-label>Settings</ion-label>
+        </ion-item>
+
+        <!-- <ion-input type="hidden" name="$key" formControlName="$key"></ion-input>
 
         <ion-input type="hidden" name="urlImage" formControlName="urlImage"></ion-input>
 
-        <ion-item>
+        <ion-item lines="none">
           <ion-label position="floating">Nombre</ion-label>
           <ion-input name="name" formControlName="name"></ion-input>
         </ion-item>
     
-        <ion-item>
+        <ion-item lines="none">
           <ion-label position="floating">Email</ion-label>
           <ion-input name="email" formControlName="email"></ion-input>
         </ion-item>
 
+      <ion-button [disabled]="!usersService.userForm.valid" type="onSubmitUpdate(this.usersService.userForm.value)">Guardar</ion-button> -->
+
       </ion-list>
-      <ion-button [disabled]="!usersService.userForm.valid" type="onSubmitUpdate(this.usersService.userForm.value)">Guardar</ion-button>
-  </form>
+  <!-- </form> -->
 </ion-content>
