--- a/src/app/home/shared/pages/charts/charts.page.html
+++ b/src/app/home/shared/pages/charts/charts.page.html
@@ -1,20 +1,18 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>charts</ion-title>
+    <ion-title class="ion-text-center">Estadísticas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1>Chart One</h1>
   <ion-card>
     <ion-card-content>
-      <canvas id="lineal">{{ chartLineal }}</canvas>
+      <canvas #linealChart ></canvas>
     </ion-card-content>
   </ion-card>
-  <h1>Chart Two</h1>
   <ion-card>
     <ion-card-content>
-      <canvas id="bar">{{ chartBar }}</canvas>
+      <canvas #barChart></canvas>
     </ion-card-content>
   </ion-card>
 </ion-content>
