--- a/src/app/home/shared/pages/inventario/inventario.page.html
+++ b/src/app/home/shared/pages/inventario/inventario.page.html
@@ -1,7 +1,6 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-icon class="arrow-back" name="arrow-back-outline" routerLink="/" slot="start"></ion-icon>
-    <ion-title>Mi inventario</ion-title>
+    <ion-title class="ion-text-center" >Inventario</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -14,7 +13,7 @@
   
           <ion-card>
             <ion-row id="registro-list">
-              <ion-col>Imagen</ion-col>
+              <ion-col>Nombre</ion-col>
               <ion-col>Marca</ion-col>
               <ion-col>Cantidad</ion-col>
               <ion-col>Accion</ion-col>
@@ -25,20 +24,7 @@
             <div id="square">
               <div id="row-section" *ngFor="let producto of inventarioList;">
                 <ion-row class="ion-align-items-center" id="registro">
-                  <ion-col *ngIf="producto.imagen == undefined; else imagen" size="3">
-                    <p>No hay imágenes aún</p>
-                  </ion-col>
-                  <ng-template #imagen>
-                    <ion-col size="3" class="col-element col-images">
-                      <ion-grid>
-                        <ion-row>
-                          <ion-col class="col-image" size="5" *ngFor="let image of producto.imagen">
-                            <img [src]="image.urlImage" alt="">
-                          </ion-col>
-                        </ion-row>
-                      </ion-grid>
-                    </ion-col>
-                  </ng-template>
+                  <ion-col size="3" class="col-element">{{producto.nombre}}</ion-col>
                   <ion-col size="3" class="col-element">{{producto.marca}}</ion-col>
                   <ion-col size="3" class="col-element-cantidad">{{producto.cantidad}}</ion-col>
                   <ion-col size="3" class="col-element">
