--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,7 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+// .alert_submit {
+//     font-family: ‘Segoe UI’, Tahoma, Geneva, Verdana, sans-serif;
+// }
